--- a/.github/workflows/runGrabber.yml
+++ b/.github/workflows/runGrabber.yml
@@ -20,8 +20,8 @@ jobs:
       - name: Grab Link
 
         run: |
-          git config --global user.email "action@github.com"
-          git config --global user.name "Github Action"
+          git config --global user.email "ryuzaki_l@y7mail.com"
+          git config --global user.name "Justryuz"
           chmod +x exec_grabber.sh && ./exec_grabber.sh
           git add -A
           git commit -m "Playlist updated."
